After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682795 - Annotation problem for clutter_actor_iter_next()/clutter_actor_iter_prev()
Annotation problem for clutter_actor_iter_next()/clutter_actor_iter_prev()
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: ClutterActor
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-27 12:11 UTC by Lionel Landwerlin
Modified: 2012-08-27 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch v1 (1.32 KB, patch)
2012-08-27 12:11 UTC, Lionel Landwerlin
accepted-commit_now Details | Review

Description Lionel Landwerlin 2012-08-27 12:11:02 UTC
Missing out a (transfer-none).
Comment 1 Lionel Landwerlin 2012-08-27 12:11:37 UTC
Created attachment 222539 [details] [review]
Patch v1
Comment 2 Emmanuele Bassi (:ebassi) 2012-08-27 12:37:40 UTC
Review of attachment 222539 [details] [review]:

looks good
Comment 3 Lionel Landwerlin 2012-08-27 13:02:53 UTC
Pushed to master.