actor-iter: fix prev()/next() annotations

https://bugzilla.gnome.org/show_bug.cgi?id=682795